# modular-slam

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml   CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_808d7a9f8088418ac4abdd409ca44acd.html  dummy_8cpp.html  dummy_8cpp.js  dummy_8cpp__incl.map  dummy_8cpp__incl.md5  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  loop__detection__test_8cpp.html  loop__detection__test_8cpp.js  loop__detection__test_8cpp__incl.map  loop__detection__test_8cpp__incl.md5  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemslam.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  plugin__loader__test_8cpp.html  plugin__loader__test_8cpp.js  plugin__loader__test_8cpp__incl.map  plugin__loader__test_8cpp__incl.md5
.github/workflows/: cmake.yml  main.yml
ci/Docker/: Dockerfile  dbow3.patch
conan_recipes/dbow3/: conanfile.py  dbow3.patch  dbow3_orig.patch
doc/: CMakeLists.txt  Doxyfile.in
doc/articles/loop_detection_comparision/: loop_detection_analysis.tex
include/modular_slam/: basic_parameters_handler.hpp  camera.hpp  data_provider.hpp  map.hpp  modular_slam.hpp  odometry.hpp  parameters_handler.hpp  plugin_loader.hpp  realsense_camera.hpp  rgbd_file_provider.hpp  types.hpp  utils.hpp
include/modular_slam/app/viewer/: viewer_main_window.hpp
research/python/odometry/: visual_odometry.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt  basic_parameters_handler.cpp  basic_parameters_handler.hpp  odometry.cpp  realsense_camera.cpp  rgbd_file_provider.cpp
src/app/: CMakeLists.txt  viewer.cpp
src/app/cmake/: ModularSlamApplicationsConfig.cmake
src/app/slam/: rgbd_slam.cpp
src/app/viewer/: camera.cpp  camera.hpp  colorbar.cpp  colorbar.hpp  depth_image_viewer.cpp  depth_image_viewer.hpp  grid.cpp  grid.hpp  image_viewer.cpp  image_viewer.hpp  keyframe_thumbnail.cpp  keyframe_thumbnail.hpp  main_viewer.cpp  map_2d_widget.cpp  map_2d_widget.hpp  parameters_viewer.cpp  parameters_viewer.hpp  pointcloud_viewer.cpp  pointcloud_viewer.hpp  range.hpp  slam_statistics.hpp  slam_statistics_widget.cpp  slam_statistics_widget.hpp  slam_thread.cpp  slam_thread.hpp  viewer.cpp  viewer_main_window.cpp  viewer_main_window.hpp
src/app/viewer/qrc/: viewer.qrc
src/app/viewer/shaders/: fragment.glsl  mvp.glsl  pointcloud.glsl  pointcloud_fragment.glsl  thumbnail.glsl  thumbnail_fragment.glsl  wireframe.glsl  wireframe_fragment.glsl
src/app/viewer/ui/: depth_image_viewer.ui  image_viewer.ui  slam_statistics.ui  viewer_main_window.ui
src/lib/: CMakeLists.txt
src/lib/modular_slam/: CMakeLists.txt  basic_feature_map_components_factory.cpp  basic_map.cpp  basic_parameters_handler.cpp  camera_parameters.cpp  ceres_backend.cpp  ceres_reprojection_error_pnp.cpp  cv_ransac_pnp.cpp  distributed_cv_feature.cpp  distributed_orb_detector.cpp  feature.cpp  frame.cpp  min_mse_tracker.cpp  orb_feature.cpp  orb_relocalizer.cpp  parameters_handler.cpp  projection.cpp  realsense_camera.cpp  rgbd_feature_frontend.cpp  rgbd_file_provider.cpp
src/lib/modular_slam/cmake/: ModularSlamConfig.cmake
src/lib/modular_slam/include/modular_slam/: backend_interface.hpp  backend_output.hpp  basic_feature_map_components_factory.hpp  basic_map.hpp  basic_parameters_handler.hpp  basic_types.hpp  camera.hpp  camera_parameters.hpp  ceres_backend.hpp  ceres_reprojection_error_pnp.hpp  constraints_interface.hpp  cv_ransac_pnp.hpp  data_provider.hpp  depth_frame.hpp  distributed_cv_feature.hpp  distributed_orb_detector.hpp  factory.hpp  feature_interface.hpp  frontend_interface.hpp  frontend_output.hpp  grayscale_frame.hpp  keyframe.hpp  landmark.hpp  loop_detection.hpp  map.hpp  map_interface.hpp  min_mse_tracker.hpp  modular_slam.hpp  observation.hpp  orb_feature.hpp  orb_relocalizer.hpp  parameters_handler.hpp  plugin_loader.hpp  pnp.hpp  projection.hpp  ransac_tracker.hpp  realsense_camera.hpp  relocalizer.hpp  rgb_frame.hpp  rgbd_file_provider.hpp  (+10 more)
src/lib/modular_slam/include/modular_slam/backend/: backend_interface.hpp  backend_output.hpp  ceres_backend.hpp  ceres_reprojection_error_pnp.hpp
src/lib/modular_slam/include/modular_slam/frontend/: feature_frontend.hpp  frontend_interface.hpp  rgbd_feature_frontend.hpp
src/lib/modular_slam/include/modular_slam/frontend/feature/: feature_interface.hpp
src/lib/modular_slam/include/modular_slam/map/: basic_feature_map_components_factory.hpp  basic_map.hpp  map.hpp  map_interface.hpp
src/lib/modular_slam/include/modular_slam/parameters/: basic_parameters_handler.hpp  parameters_handler.hpp
src/lib/modular_slam/include/modular_slam/sensors/: camera.hpp  camera_parameters.hpp  realsense_camera.hpp  rgbd_file_provider.hpp
src/lib/modular_slam/include/modular_slam/types/: basic_types.hpp  depth_frame.hpp  frontend_output.hpp  grayscale_frame.hpp  keyframe.hpp  landmark.hpp  rgb_frame.hpp  rgbd_frame.hpp  rgbd_slam_types.hpp  rgbdi_frame.hpp  slam3d_types.hpp  state.hpp  types.hpp
src/ut/: dummy.cpp  loop_detection_test.cpp  odometry_test.cpp  parameter_register_test.cpp  plugin_loader_test.cpp  rgbd_file_provider_test.cpp
test/: CMakeLists.txt  dummy.cpp  parameter_register_test.cpp  plugin_config.json  plugin_loader_test.cpp  rgbd_file_provider_test.cpp  slam_builder_test.cpp
utils/tools/py/: evaluate.py  requirements.txt
utils/tools/py/3rdparty_slam/lsd_slam/: Dockerfile  lsd_slam_working.patch
utils/tools/py/3rdparty_slam/orb_slam_3/: Dockerfile
utils/tools/py/3rdparty_slam/stella_vslam/: Dockerfile
